syntax = "proto3";
option csharp_namespace = "Protobuf.Www.Header.Profile";

package www;
import "google/protobuf/empty.proto";
import "Share/Protos/Shared/Status.proto";
import "Share/Protos/Shared/Text.proto";
service Profile {
  rpc GetProfile (google.protobuf.Empty) returns (ProfileDto);
  rpc ModifyProfile(ProfileDto)returns(shared.Status);
}

message ProfileDto {
  string header_picture_url = 1;
  shared.Text name = 2;
  optional shared.Text summary = 3;
  optional  shared.Text description = 4;
}
